--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -134,53 +134,104 @@
     "regras[\"cons\"] = regras[\"cons\"].str.split();\n",
     "regras[\"antc\"] = regras[\"antc\"].str.split();\n",
     "\n",
-    "\n",
-    "\n",
-    "print(regras);\n",
-    "\n"
+    "print(regras);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculo de Suporte"
+    "# Suporte Absoluto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.13333333333333333\n"
+      "12 6 ==> 13 #SUPP: 5\n",
+      "12 17 14 ==> 2 #SUPP: 2\n"
      ]
     }
    ],
    "source": [
-    "def calcSupp(antecedente, consequente):\n",
-    "    itemset = list(antecedente) + list(consequente);\n",
-    "    suporte = dados[:,itemset[0]-1]\n",
-    "    \n",
-    "    for i in itemset[1:]:\n",
-    "        suporte *= dados[:,i-1];\n",
-    "        \n",
-    "    return np.sum(suporte, axis=0)/ dados.shape[0] ;\n",
+    "def abSuppRA(antc, consq):\n",
+    "    return calcSupp(list(antc) + list(consq));\n",
     "\n",
     "\n",
-    "print(calcSupp([12, 17, 14], [2]))\n",
+    "def abSupp(itemset):\n",
+    "    base = np.copy(dados[:,itemset[0]-1]);\n",
+    "\n",
+    "    for i in itemset:\n",
+    "        base *= dados[:,i-1];\n",
+    "   \n",
+    "    return np.sum(base, axis=0);\n",
+    "      \n",
+    "print(\"12 6 ==> 13 #SUPP: \" + str(calcSuppRA([12, 6], [13]))) #5\n",
+    "print(\"12 17 14 ==> 2 #SUPP: \" + str(calcSuppRA([12, 17, 14], [2]))) #2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Suporte Relativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reSuppRA(antc, consq):\n",
+    "    return reSupp(list(antc) + list(consq));\n",
+    "\n",
+    "def reSupp(itemset):\n",
+    "    return abSupp(itemset) / dados.shape[1];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Confiança"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.6666666666666666\n",
+      "0.2857142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "def conf(antc,consq):\n",
+    "    return abSuppRA(antc,consq)/abSupp(antc);\n",
     "\n",
     "\n",
-    "\n",
-    "#print(np.sum(dados[:,0]*dados[:,5]/dados.shape[0]))\n",
-    "\n",
-    "\n",
-    "        \n",
-    "    \n",
-    "\n"
+    "print(conf([12, 17, 14], [2]));# 1.0\n",
+    "print(conf([6, 1, 18], [13])); # .666\n",
+    "print(conf([6, 13], [1, 18])); #0.2857142857142857"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Added Value"
    ]
   },
   {
@@ -188,7 +239,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def addedValue(antc, consq):\n",
+    "    return conf(antc, consq)-reSupp(consq);"
+   ]
   }
  ],
  "metadata": {
