Added value e all confidence

--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -243,6 +243,25 @@
     "def addedValue(antc, consq):\n",
     "    return conf(antc, consq)-reSupp(consq);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All-Confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def allConf(itemset):\n",
+    "    maxSup = max([reSupp(i) for i in itemset])\n",
+    "    \n",
+    "    return reSupp(itemset)/maxSup"
+   ]
   }
  ],
  "metadata": {
