--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -74,6 +74,8 @@
     "# pre-processando\n",
     "mtBinaria = pd.get_dummies(mt);\n",
     "dados = mtBinaria.astype('int').to_numpy();\n",
+    "dadosNeg = abs(dados-1);\n",
+    "\n",
     "print(dados);"
    ]
   },
@@ -86,50 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       AR  sup                   cnf                itemset  \\\n",
-      "0                6 ==> 1    5     0.5555555555555556                 [6, 1]   \n",
-      "1                1 ==> 6    5                    1.0                 [1, 6]   \n",
-      "2                4 ==> 2    3                    1.0                 [4, 2]   \n",
-      "3                2 ==> 4    3                    0.5                 [2, 4]   \n",
-      "4                5 ==> 2    3                    1.0                 [5, 2]   \n",
-      "...                   ...  ...                   ...                    ...   \n",
-      "1369  15 ==> 3 6 9 12 16    1     0.3333333333333333  [15, 3, 6, 9, 12, 16]   \n",
-      "1370  12 ==> 3 6 9 15 16    1                    0.1  [12, 3, 6, 9, 15, 16]   \n",
-      "1371  9 ==> 3 6 12 15 16    1    0.16666666666666666  [9, 3, 6, 12, 15, 16]   \n",
-      "1372  6 ==> 3 9 12 15 16    1     0.1111111111111111  [6, 3, 9, 12, 15, 16]   \n",
-      "1373  3 ==> 6 9 12 15 16    1                   0.25  [3, 6, 9, 12, 15, 16]   \n",
+      "                       AR  sup                   cnf  antc                cons\n",
+      "0                6 ==> 1    5     0.5555555555555556   [6]                 [1]\n",
+      "1                1 ==> 6    5                    1.0   [1]                 [6]\n",
+      "2                4 ==> 2    3                    1.0   [4]                 [2]\n",
+      "3                2 ==> 4    3                    0.5   [2]                 [4]\n",
+      "4                5 ==> 2    3                    1.0   [5]                 [2]\n",
+      "...                   ...  ...                   ...   ...                 ...\n",
+      "1369  15 ==> 3 6 9 12 16    1     0.3333333333333333  [15]   [3, 6, 9, 12, 16]\n",
+      "1370  12 ==> 3 6 9 15 16    1                    0.1  [12]   [3, 6, 9, 15, 16]\n",
+      "1371  9 ==> 3 6 12 15 16    1    0.16666666666666666   [9]  [3, 6, 12, 15, 16]\n",
+      "1372  6 ==> 3 9 12 15 16    1     0.1111111111111111   [6]  [3, 9, 12, 15, 16]\n",
+      "1373  3 ==> 6 9 12 15 16    1                   0.25   [3]  [6, 9, 12, 15, 16]\n",
       "\n",
-      "      antc                cons  \n",
-      "0      [6]                 [1]  \n",
-      "1      [1]                 [6]  \n",
-      "2      [4]                 [2]  \n",
-      "3      [2]                 [4]  \n",
-      "4      [5]                 [2]  \n",
-      "...    ...                 ...  \n",
-      "1369  [15]   [3, 6, 9, 12, 16]  \n",
-      "1370  [12]   [3, 6, 9, 15, 16]  \n",
-      "1371   [9]  [3, 6, 12, 15, 16]  \n",
-      "1372   [6]  [3, 9, 12, 15, 16]  \n",
-      "1373   [3]  [6, 9, 12, 15, 16]  \n",
-      "\n",
-      "[1374 rows x 6 columns]\n"
+      "[1374 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
+    "# lendo a base\n",
     "regras = pd.read_table(baseRegras, sep=\"#\", names=(\"AR\", \"sup\", \"cnf\"));\n",
+    "# limpando os valores\n",
     "regras[\"sup\"] = regras[\"sup\"].str.replace(\"SUP:\", \"\");\n",
     "regras[\"cnf\"] = regras[\"cnf\"].str.replace(\"CONF:\", \"\");\n",
-    "\n",
-    "regras[\"itemset\"] = regras[\"AR\"].str.replace(\"==>\", \" \").str.split();\n",
-    "\n",
     "regras[\"antc\"], regras[\"cons\"] =  regras[\"AR\"].str.split(\"==>\").str;\n",
     "regras[\"cons\"] = regras[\"cons\"].str.split();\n",
     "regras[\"antc\"] = regras[\"antc\"].str.split();\n",
@@ -141,12 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Suporte Absoluto"
+    "# Suporte"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -159,40 +147,28 @@
     }
    ],
    "source": [
-    "def abSuppRA(antc, consq):\n",
-    "    return calcSupp(list(antc) + list(consq));\n",
-    "\n",
-    "\n",
-    "def abSupp(itemset):\n",
-    "    base = np.copy(dados[:,itemset[0]-1]);\n",
-    "\n",
+    "def absSupp(itemset1, itemset2=[], negativo=False):\n",
+    "    itemset = itemset1 + itemset2;   \n",
+    "    # Se o suporte for negativo, usamos a base invertida.\n",
+    "    if negativo:\n",
+    "        base = dadosNeg;\n",
+    "    else:\n",
+    "        base = dados;\n",
+    "    # criando um vetor temporário (para não alterar a base de dados).\n",
+    "    tmp = np.copy(base[:,itemset[0]-1]);\n",
+    "    # multiplicando os vetores de cada item dentro do itemset\n",
     "    for i in itemset:\n",
-    "        base *= dados[:,i-1];\n",
-    "   \n",
-    "    return np.sum(base, axis=0);\n",
-    "      \n",
-    "print(\"12 6 ==> 13 #SUPP: \" + str(calcSuppRA([12, 6], [13]))) #5\n",
-    "print(\"12 17 14 ==> 2 #SUPP: \" + str(calcSuppRA([12, 17, 14], [2]))) #2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Suporte Relativo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reSuppRA(antc, consq):\n",
-    "    return reSupp(list(antc) + list(consq));\n",
+    "        tmp *= base[:,i-1];   \n",
+    "    # Somando todos os elementos dos vetores\n",
+    "    return np.sum(tmp, axis=0);\n",
+    "    \n",
+    "    \n",
+    "def relSupp(itemset1, itemset2=[], negativo=False):\n",
+    "    return absSupp(itemset1, itemset2, negativo) / dados.shape[1];\n",
     "\n",
-    "def reSupp(itemset):\n",
-    "    return abSupp(itemset) / dados.shape[1];"
+    "      \n",
+    "print(\"12 6 ==> 13 #SUPP: \" + str(absSupp([12, 6], [13]))) #5\n",
+    "print(\"12 17 14 ==> 2 #SUPP: \" + str(absSupp([12, 17, 14], [2]))) #2"
    ]
   },
   {
@@ -224,7 +200,7 @@
     "\n",
     "print(conf([12, 17, 14], [2]));# 1.0\n",
     "print(conf([6, 1, 18], [13])); # .666\n",
-    "print(conf([6, 13], [1, 18])); #0.2857142857142857"
+    "print(conf([6, 13], [1, 18])); # .2857142857142857"
    ]
   },
   {
@@ -261,6 +237,40 @@
     "    maxSup = max([reSupp(i) for i in itemset])\n",
     "    \n",
     "    return reSupp(itemset)/maxSup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Casual Support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def casualSupp(ant, cons):\n",
+    "    return relSupp(ant, cons) + relSupp(ant, cons, negativo=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Certainty Factor (CF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def certFactor(ant, cons):\n",
+    "    return conf(ant,cons)-relSupp(cons)/relSupp(cons, negativo=True);"
    ]
   }
  ],
