Alteracao suporte, chisquare, cross-support, collective strenght

--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "import numpy as np;\n",
-    "import pandas as pd;"
+    "import pandas as pd;\n",
+    "from scipy.stats import chisquare;"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +70,10 @@
     }
    ],
    "source": [
-    "# lendo arquivo\n",
     "mt = pd.read_table(baseDados, delim_whitespace=True, dtype=\"str\", header=None);\n",
-    "# pre-processando\n",
     "mtBinaria = pd.get_dummies(mt);\n",
     "dados = mtBinaria.astype('int').to_numpy();\n",
     "dadosNeg = abs(dados-1);\n",
-    "\n",
     "print(dados);"
    ]
   },
@@ -88,40 +86,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       AR  sup                   cnf  antc                cons\n",
-      "0                6 ==> 1    5     0.5555555555555556   [6]                 [1]\n",
-      "1                1 ==> 6    5                    1.0   [1]                 [6]\n",
-      "2                4 ==> 2    3                    1.0   [4]                 [2]\n",
-      "3                2 ==> 4    3                    0.5   [2]                 [4]\n",
-      "4                5 ==> 2    3                    1.0   [5]                 [2]\n",
-      "...                   ...  ...                   ...   ...                 ...\n",
-      "1369  15 ==> 3 6 9 12 16    1     0.3333333333333333  [15]   [3, 6, 9, 12, 16]\n",
-      "1370  12 ==> 3 6 9 15 16    1                    0.1  [12]   [3, 6, 9, 15, 16]\n",
-      "1371  9 ==> 3 6 12 15 16    1    0.16666666666666666   [9]  [3, 6, 12, 15, 16]\n",
-      "1372  6 ==> 3 9 12 15 16    1     0.1111111111111111   [6]  [3, 9, 12, 15, 16]\n",
-      "1373  3 ==> 6 9 12 15 16    1                   0.25   [3]  [6, 9, 12, 15, 16]\n",
+      "      sup       cnf  antc                cons\n",
+      "0     5.0  0.555556   [6]                 [1]\n",
+      "1     5.0  1.000000   [1]                 [6]\n",
+      "2     3.0  1.000000   [4]                 [2]\n",
+      "3     3.0  0.500000   [2]                 [4]\n",
+      "4     3.0  1.000000   [5]                 [2]\n",
+      "...   ...       ...   ...                 ...\n",
+      "1369  1.0  0.333333  [15]   [3, 6, 9, 12, 16]\n",
+      "1370  1.0  0.100000  [12]   [3, 6, 9, 15, 16]\n",
+      "1371  1.0  0.166667   [9]  [3, 6, 12, 15, 16]\n",
+      "1372  1.0  0.111111   [6]  [3, 9, 12, 15, 16]\n",
+      "1373  1.0  0.250000   [3]  [6, 9, 12, 15, 16]\n",
       "\n",
-      "[1374 rows x 5 columns]\n"
+      "[1374 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
-    "# lendo a base\n",
     "regras = pd.read_table(baseRegras, sep=\"#\", names=(\"AR\", \"sup\", \"cnf\"));\n",
-    "# limpando os valores\n",
-    "regras[\"sup\"] = regras[\"sup\"].str.replace(\"SUP:\", \"\");\n",
-    "regras[\"cnf\"] = regras[\"cnf\"].str.replace(\"CONF:\", \"\");\n",
     "regras[\"antc\"], regras[\"cons\"] =  regras[\"AR\"].str.split(\"==>\").str;\n",
+    "del regras[\"AR\"]\n",
+    "regras[\"sup\"] = regras[\"sup\"].str.replace(\"SUP:\", \"\").astype('float');\n",
+    "regras[\"cnf\"] = regras[\"cnf\"].str.replace(\"CONF:\", \"\").astype('float');\n",
     "regras[\"cons\"] = regras[\"cons\"].str.split();\n",
     "regras[\"antc\"] = regras[\"antc\"].str.split();\n",
-    "\n",
     "print(regras);"
    ]
   },
@@ -134,41 +130,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "9\n",
       "12 6 ==> 13 #SUPP: 5\n",
       "12 17 14 ==> 2 #SUPP: 2\n"
      ]
     }
    ],
    "source": [
-    "def absSupp(itemset1, itemset2=[], negativo=False):\n",
+    "def intersect(itemset, base):\n",
+    "    tmp = np.copy(base[:,itemset[0]-1]);\n",
+    "    for i in itemset[1:]:\n",
+    "        tmp *= base[:,i-1];\n",
+    "    return tmp\n",
+    "\n",
+    "def abSupp(itemset1, itemset2=[], negativo=False):\n",
     "    itemset = itemset1 + itemset2;   \n",
-    "    # Se o suporte for negativo, usamos a base invertida.\n",
     "    if negativo:\n",
     "        base = dadosNeg;\n",
     "    else:\n",
-    "        base = dados;\n",
-    "    # criando um vetor temporário (para não alterar a base de dados).\n",
-    "    tmp = np.copy(base[:,itemset[0]-1]);\n",
-    "    # multiplicando os vetores de cada item dentro do itemset\n",
-    "    for i in itemset:\n",
-    "        tmp *= base[:,i-1];   \n",
-    "    # Somando todos os elementos dos vetores\n",
-    "    return np.sum(tmp, axis=0);\n",
+    "        base = dados;    \n",
+    "    return np.sum(intersect(itemset, base), axis=0);\n",
     "    \n",
     "    \n",
     "def relSupp(itemset1, itemset2=[], negativo=False):\n",
-    "    return absSupp(itemset1, itemset2, negativo) / dados.shape[1];\n",
+    "    return abSupp(itemset1, itemset2, negativo) / dados.shape[1];\n",
     "\n",
-    "      \n",
-    "print(\"12 6 ==> 13 #SUPP: \" + str(absSupp([12, 6], [13]))) #5\n",
-    "print(\"12 17 14 ==> 2 #SUPP: \" + str(absSupp([12, 17, 14], [2]))) #2"
+    "print(abSupp([6]));      \n",
+    "print(\"12 6 ==> 13 #SUPP: \" + str(abSupp([12, 6], [13]))) #5\n",
+    "print(\"12 17 14 ==> 2 #SUPP: \" + str(abSupp([12, 17, 14], [2]))) #2"
    ]
   },
   {
@@ -180,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +191,7 @@
    ],
    "source": [
     "def conf(antc,consq):\n",
-    "    return abSuppRA(antc,consq)/abSupp(antc);\n",
-    "\n",
+    "    return abSupp(antc,consq)/abSupp(antc);\n",
     "\n",
     "print(conf([12, 17, 14], [2]));# 1.0\n",
     "print(conf([6, 1, 18], [13])); # .666\n",
@@ -212,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +260,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def certFactor(ant, cons):\n",
     "    return conf(ant,cons)-relSupp(cons)/relSupp(cons, negativo=True);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chi-Squared\n",
+    "\n",
+    "http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.81.4523&rep=rep1&type=pdf\n",
+    "\n",
+    "ftp://ftp.cse.buffalo.edu/users/azhang/disc/disc01/cd1/out/websites/kdd_explorations_full/ahmed.pdf\n",
+    "\n",
+    "https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.chisquare.html\n",
+    "\n",
+    "https://stackoverflow.com/questions/9330114/chi-squared-test-in-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chiSqrd(antc, cons):\n",
+    "    #    l1 = [5,15,5]\n",
+    "    #    l2 = [50,10,15]\n",
+    "    #    l3 = [55,25,20]    \n",
+    "    #    a= np.matrix([l1, l2, l3])\n",
+    "    \n",
+    "    a = [intersect(antc, dados), intersect(antc, dadosNeg)]\n",
+    "    c = [intersect(cons, dados), intersect(cons, dadosNeg)]\n",
+    "    \n",
+    "    l = lambda i, j : np.sum(i*j);\n",
+    "    a = np.matrix([[l(i,j) for i in a] for j in c])\n",
+    "    df=a.shape[1]\n",
+    "    observado = a.getA1()\n",
+    "    \n",
+    "    k = lambda i, j : np.sum(a[i,:])*np.sum(a[:,j])/np.sum(a)    \n",
+    "    esperado = [k(i,j) for i in range(a.shape[0]) for j in range(a.shape[1])]\n",
+    "    \n",
+    "    chi, p = chisquare(f_obs=observado, f_exp=esperado, ddof=df)    \n",
+    "    return chi\n",
+    "\n",
+    "print(chiSqrd([1],[6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cross-Support Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossSuppRatio(itemset):\n",
+    "    suportes = [abSupp(i) for i in itemset]\n",
+    "    return min(suportes)/max(suportes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collective Strength (ERRADO)\n",
+    "http://www09.sigmod.org/disc/disc99/disc/sigmod_papers/slipp_a_new_framework_for_/slides.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v1 -3.6666666666666665\n",
+      "v2 0.26666666666666666\n",
+      "-0.33249158249158245\n",
+      "0.375\n",
+      "7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def violationsCount(itemset):\n",
+    "    tmp = np.copy(dados[:,itemset[0]-1]);\n",
+    "    for i in itemset[1:]:\n",
+    "        tmp = tmp | dados[:,i-1];\n",
+    "    return tmp - abSupp(itemset)\n",
+    "\n",
+    "def collectiveStrength(itemset):\n",
+    "    violation = np.sum(violationsCount(itemset), axis=0) ;\n",
+    "    violation = violation/dados.shape[1];\n",
+    "    violation2 = dados.shape[0]-abSupp(itemset)-abSupp(itemset, negativo=True)\n",
+    "    violation2 /= dados.shape[0]\n",
+    "    print(\"v1 \"+str(violation))\n",
+    "    print(\"v2 \"+str(violation2))\n",
+    "    sup = relSupp(itemset)\n",
+    "    \n",
+    "    return ((1-violation)/1-sup) * ((sup)/violation)\n",
+    "    \n",
+    "print(collectiveStrength([6,1]))    \n",
+    "    \n",
+    "x= list(\"11110000\")\n",
+    "y= list(\"11000000\")\n",
+    "z= list(\"01111111\")\n",
+    "teste = [x, y, z]\n",
+    "teste = np.matrix([[ int(i) for i in a] for a in teste])\n",
+    "x= teste[0,:]\n",
+    "for i in teste[2:2]:\n",
+    "    x = x | i\n",
+    "sup = 3/8\n",
+    "violation = (np.sum(x)-3)/8\n",
+    "print(sup)\n",
+    "print(((1-violation)/sup) * ((sup)/violation))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
