--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -160,7 +160,7 @@
     "    \n",
     "    \n",
     "def relSupp(itemset1, itemset2=[], negativo=False):\n",
-    "    return abSupp(itemset1, itemset2, negativo) / dados.shape[1];\n",
+    "    return abSupp(itemset1, itemset2, negativo) / dados.shape[0];\n",
     "\n",
     "print(abSupp([6]));      \n",
     "print(\"12 6 ==> 13 #SUPP: \" + str(abSupp([12, 6], [13]))) #5\n",
@@ -255,6 +255,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Casual Confidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def casualConf(ant, cons):\n",
+    "    conf1 = conf(ant,cons)\n",
+    "    conf2 = abSupp(ant,cons, negativo=True) / abSupp(ant, negativo=True)\n",
+    "    return (conf1 + conf2) * .5\n",
+    "\n",
+    "print(casualConf([1], [6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Certainty Factor (CF)"
    ]
   },
@@ -285,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -303,16 +332,15 @@
     "    #    l3 = [55,25,20]    \n",
     "    #    a= np.matrix([l1, l2, l3])\n",
     "    \n",
-    "    a = [intersect(antc, dados), intersect(antc, dadosNeg)]\n",
-    "    c = [intersect(cons, dados), intersect(cons, dadosNeg)]\n",
+    "    lin = [intersect(antc, dados), intersect(antc, dadosNeg)]\n",
+    "    col = [intersect(cons, dados), intersect(cons, dadosNeg)]\n",
+    "\n",
+    "    tbCtg = np.matrix([[np.sum(i*j) for i in lin] for j in col])\n",
+    "    df = tbCtg.shape[1] - 1\n",
+    "    observado = tbCtg.getA1()\n",
     "    \n",
-    "    l = lambda i, j : np.sum(i*j);\n",
-    "    a = np.matrix([[l(i,j) for i in a] for j in c])\n",
-    "    df=a.shape[1]\n",
-    "    observado = a.getA1()\n",
-    "    \n",
-    "    k = lambda i, j : np.sum(a[i,:])*np.sum(a[:,j])/np.sum(a)    \n",
-    "    esperado = [k(i,j) for i in range(a.shape[0]) for j in range(a.shape[1])]\n",
+    "    calcEsp = lambda i, j : np.sum(tbCtg[i,:])*np.sum(tbCtg[:,j])/np.sum(tbCtg)    \n",
+    "    esperado = [calcEsp(i,j) for i in range(tbCtg.shape[0]) for j in range(tbCtg.shape[0])]\n",
     "    \n",
     "    chi, p = chisquare(f_obs=observado, f_exp=esperado, ddof=df)    \n",
     "    return chi\n",
@@ -342,59 +370,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collective Strength (ERRADO)\n",
+    "# Collective Strength ????\n",
     "http://www09.sigmod.org/disc/disc99/disc/sigmod_papers/slipp_a_new_framework_for_/slides.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v1 -3.6666666666666665\n",
-      "v2 0.26666666666666666\n",
-      "-0.33249158249158245\n",
-      "0.375\n",
-      "7.0\n"
+      "0.47453703703703715\n"
      ]
     }
    ],
    "source": [
-    "def violationsCount(itemset):\n",
-    "    tmp = np.copy(dados[:,itemset[0]-1]);\n",
-    "    for i in itemset[1:]:\n",
-    "        tmp = tmp | dados[:,i-1];\n",
-    "    return tmp - abSupp(itemset)\n",
-    "\n",
     "def collectiveStrength(itemset):\n",
-    "    violation = np.sum(violationsCount(itemset), axis=0) ;\n",
-    "    violation = violation/dados.shape[1];\n",
-    "    violation2 = dados.shape[0]-abSupp(itemset)-abSupp(itemset, negativo=True)\n",
-    "    violation2 /= dados.shape[0]\n",
-    "    print(\"v1 \"+str(violation))\n",
-    "    print(\"v2 \"+str(violation2))\n",
+    "    violation = dados.shape[0]-abSupp(itemset)-abSupp(itemset, negativo=True)\n",
+    "    violation /= dados.shape[0]\n",
+    "\n",
     "    sup = relSupp(itemset)\n",
     "    \n",
     "    return ((1-violation)/1-sup) * ((sup)/violation)\n",
     "    \n",
     "print(collectiveStrength([6,1]))    \n",
-    "    \n",
-    "x= list(\"11110000\")\n",
-    "y= list(\"11000000\")\n",
-    "z= list(\"01111111\")\n",
-    "teste = [x, y, z]\n",
-    "teste = np.matrix([[ int(i) for i in a] for a in teste])\n",
-    "x= teste[0,:]\n",
-    "for i in teste[2:2]:\n",
-    "    x = x | i\n",
-    "sup = 3/8\n",
-    "violation = (np.sum(x)-3)/8\n",
-    "print(sup)\n",
-    "print(((1-violation)/sup) * ((sup)/violation))\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conviction"
    ]
   },
   {
@@ -402,7 +412,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def conviction(ant, cons):\n",
+    "    return (1-relSupp(cons))/1-conf(ant, cons)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cosine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosine(antc, cons):\n",
+    "    return(relSupp(antc,cons)/(relSupp(antc), relSup(cons))**0.5)"
+   ]
   }
  ],
  "metadata": {
