--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -433,6 +433,23 @@
     "def cosine(antc, cons):\n",
     "    return(relSupp(antc,cons)/(relSupp(antc), relSup(cons))**0.5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coverage(antc, cons):\n",
+    "    return relSupp(antc)"
+   ]
   }
  ],
  "metadata": {
