--- a/Metricas/Metricas.ipynb
+++ b/Metricas/Metricas.ipynb
@@ -9,14 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np;\n",
     "import pandas as pd;\n",
-    "from scipy.stats import chisquare;\n",
-    "from scipy.stats import chi2_contingency;"
+    "from scipy.stats import chisquare;"
    ]
   },
   {
@@ -222,30 +221,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5555555555555556\n",
-      "0.6\n",
-      "[1, 6]\n",
-      "0.3333333333333333\n",
-      "0.5555555555555556\n"
+      "[1, 6]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-247c81175dd5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mrelSupp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmaxSup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallConf2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-247c81175dd5>\u001b[0m in \u001b[0;36mallConf\u001b[0;34m(itemset)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mallConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mmaxSup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrelSupp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitemset\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrelSupp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmaxSup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-247c81175dd5>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mallConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mmaxSup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrelSupp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitemset\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mrelSupp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitemset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mmaxSup\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
    "source": [
     "def allConf(itemset):\n",
-    "    maxSup = max([relSupp([i]) for i in itemset])\n",
+    "    print(itemset)\n",
+    "    maxSup = max([relSupp(list(i)) for i in itemset])    \n",
     "    return relSupp(itemset)/maxSup\n",
     "\n",
     "def allConf2(itemset):\n",
-    "    base = dados[:, np.array(itemset) - 1]\n",
-    "    base = np.max(np.sum(base, axis=0)) / dados.shape[0]\n",
-    "    return relSupp(itemset)/base\n",
+    "    maxSup = relSupp(np.array(itemset))\n",
+    "    relSupp(itemset)/maxSup\n",
     "    \n",
     "print(allConf([1, 6]))\n",
     "print(allConf2([1, 6]))"
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,54 +339,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23.757575757575758, 8.932704402278433e-05, 4, array([[13.75,  6.25,  5.  ],\n",
-      "       [41.25, 18.75, 15.  ],\n",
-      "       [55.  , 25.  , 20.  ]]))\n",
-      "[[ 5 15  5]\n",
-      " [50 10 15]\n",
-      " [55 25 20]]\n",
-      "23.757575757575758\n",
-      "23.757575757575758\n",
-      "23.757575757575758\n"
+      "5.0\n"
      ]
     }
    ],
    "source": [
     "def chiSqrd(antc, cons):\n",
-    "    l1 = [5,15,5]\n",
-    "    l2 = [50,10,15]\n",
-    "    l3 = [55,25,20]    \n",
-    "    tbCtg= np.matrix([l1, l2, l3])\n",
+    "    #    l1 = [5,15,5]\n",
+    "    #    l2 = [50,10,15]\n",
+    "    #    l3 = [55,25,20]    \n",
+    "    #    a= np.matrix([l1, l2, l3])\n",
     "    \n",
     "    lin = [intersect(antc, dados), intersect(antc, dadosNeg)]\n",
     "    col = [intersect(cons, dados), intersect(cons, dadosNeg)]\n",
     "\n",
-    "    #tbCtg = np.matrix([[np.sum(i*j) for i in lin] for j in col])\n",
-    "\n",
-    "    \n",
-    "    chi2 = chi2_contingency(tbCtg)\n",
-    "    print(chi2)\n",
-    "    \n",
-    "    print(tbCtg)\n",
-    "    \n",
+    "    tbCtg = np.matrix([[np.sum(i*j) for i in lin] for j in col])\n",
     "    df = tbCtg.shape[1] - 1\n",
     "    observado = tbCtg.getA1()\n",
     "    \n",
     "    calcEsp = lambda i, j : np.sum(tbCtg[i,:])*np.sum(tbCtg[:,j])/np.sum(tbCtg)    \n",
     "    esperado = [calcEsp(i,j) for i in range(tbCtg.shape[0]) for j in range(tbCtg.shape[0])]\n",
     "    \n",
-    "    \n",
-    "    chi, p = chisquare(f_obs=observado, f_exp=esperado, ddof=df)  \n",
-    "    print(chi)\n",
-    "    print(chi)\n",
-    "    \n",
+    "    chi, p = chisquare(f_obs=observado, f_exp=esperado, ddof=df)    \n",
     "    return chi\n",
     "\n",
     "print(chiSqrd([1],[6]))"
